[package]
name = "tree-os"
version = "0.1.0"
authors = ["DEADBLACKCLOVER <deadblackclover@protonmail.com>"]
description = "New Year's operating system"
edition = "2018"
readme = "README.md"
homepage = "https://github.com/deadblackclover/tree-os"
repository = "https://github.com/deadblackclover/tree-os"
keywords = ["tree", "os", "system", "operating"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.3"
spin = "0.5.2"
uart_16550 = "0.2.0"
vga = "0.2.4"
vga-figures = "0.2.0"
x86_64 = "0.13.1"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33
